# russian-roulette-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Spacefile  bot.py  config.py  config.yaml  config_preview.yaml  core.py  game.py  main.py  pyproject.toml  readme.md  requirements.txt  settings.py  settings_preview.yaml  utils.py
.github/workflows/: lint.yaml  space-push.yaml
assets/markdown/: about.md  rules.md
modules/: core.py  game.py
src/bot/: __main__.py  bot.py  config.py  settings.py
src/bot/modules/: core.py  game.py
static/markdown/: about.md  rules.md
