[project]
name = "russian-roulette-bot"
version = "0.1.0"
description = "A Discord bot to play virtual Russian Roulette with your friends."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py~=2.6.3",
    "pydantic-settings~=2.12.0",
]

[dependency-groups]
dev = [
    "prek>=0.2.27",
    "ty>=0.0.2",
]

[build-system]
requires = ["uv_build>=0.9.22"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bot"

[tool.ruff]
src = ["src"]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A", "D", "T20", "TD002", "TD003"]
