[project]
name = "russian-roulette-bot"
version = "0.1.0"
description = "A Discord bot to play virtual Russian Roulette with your friends."
readme = "readme.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "discord-py~=2.7.0",
    "pydantic-settings~=2.14.0",
]

[dependency-groups]
dev = [
    "prek~=0.3.11",
    "ty~=0.0.33",
]

[build-system]
requires = ["uv_build>=0.11.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bot"

[tool.ruff]
src = ["src"]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A", "D", "T20", "TD002", "TD003"]
